# AA-SI_calibration

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  NOTICE  README.md  pyproject.toml
Roadmap/: README.md
notebooks/: full_pipeline.ipynb  manual_pipeline.ipynb  user_provided_cal_pipeline.ipynb
notebooks/Full_Pipeline_Outputs/logs/: calibration_flags.json
notebooks/Full_Pipeline_Outputs/mapping_files/: calibration_configurations.yaml  channel_to_calibration_mapping.yaml
notebooks/Full_Pipeline_Outputs/raw_file_configs/: raw_file_configs.yaml
notebooks/Full_Pipeline_Outputs/single_channel_calibration_files/: 2023-07-20__18000__config-1.yml  2023-07-20__200000__config-2.yml  2023-07-20__38000__config-2.yml  2023-07-20__70000__config-2__1.yml  2023-07-20__70000__config-2__2.yml  2023-07-21__200000__config-1.yml
notebooks/Full_Pipeline_Outputs/unused_calibration_files/: 2023-07-20__200000__config-1.yml  2023-07-20__38000__config-1.yml  2023-07-20__70000__config-1.yml  2023-07-20__70000__config-2__1.yml  2023-07-21__200000__config-1.yml
notebooks/HB2407_Manual_Outputs/Single_Channel_Calibration_Templates/: 2026-02-18__120000__config-1.yaml  2026-02-18__18000__config-1.yaml  2026-02-18__200000__config-1.yaml  2026-02-18__38000__config-1.yaml  2026-02-18__70000__config-1.yaml
notebooks/HB2407_Manual_Outputs/mapping_files/: calibration_configurations.yaml  channel_to_calibration_mapping.yaml
notebooks/HB2407_Outputs/mapping_files/: calibration_configurations.yaml  channel_to_calibration_mapping.yaml
notebooks/HB2407_Outputs/raw_file_configs/: raw_file_configs.yaml
notebooks/HB2407_Outputs/single_channel_calibration_files/: 2024-11-12__120000__config-1.yaml  2024-11-12__120000__config-1.yml  2024-11-12__18000__config-1.yaml  2024-11-12__18000__config-1.yml  2024-11-12__200000__config-1.yaml  2024-11-12__200000__config-1.yml  2024-11-12__38000__config-1.yaml  2024-11-12__38000__config-1.yml  2024-11-12__70000__config-1.yaml  2024-11-12__70000__config-1.yml
notebooks/Manual_Pipeline_Outputs/Single_Channel_Calibration_Templates/: 2026-02-18__120000__config-1.yml  2026-02-18__18000__config-1.yml  2026-02-18__200000__config-1.yml  2026-02-18__38000__config-1.yml  2026-02-18__70000__config-1.yml  2026-02-18__WBT 400479-15 ES18_ES__NoSN__0__0.001024__1000.0__18000.0__18000.0.yml  2026-02-18__WBT 400503-15 ES70-7C_ES__NoSN__0__0.001024__750.0__70000.0__70000.0.yml  2026-02-18__WBT 400509-15 ES200-7C_ES__NoSN__0__0.001024__150.0__200000.0__200000.0.yml  2026-02-18__WBT 400517-15 ES120-7C_ES__NoSN__0__0.001024__250.0__120000.0__120000.0.yml  2026-02-18__WBT 400528-15 ES38-7_ES__447__0__0.001024__1000.0__38000.0__38000.0.yml
notebooks/Manual_Pipeline_Outputs/mapping_files/: calibration_configurations.yaml  channel_to_calibration_mapping.yaml
notebooks/Manual_Pipeline_Outputs/raw_file_configs/: raw_file_configs.yaml
notebooks/User_Provided_Cal_Pipeline_Outputs/mapping_files/: calibration_configurations.yaml  channel_to_calibration_mapping.yaml
notebooks/User_Provided_Cal_Pipeline_Outputs/raw_file_configs/: raw_file_configs.yaml
notebooks/example_data/HB2407_cal/: CalibrationDataFile-D20241112-T040149-018kHz.xml  CalibrationDataFile-D20241112-T040149-038kHz.xml  CalibrationDataFile-D20241112-T040149-070kHz.xml  CalibrationDataFile-D20241112-T040149-120kHz.xml  CalibrationDataFile-D20241112-T040149-200kHz.xml
notebooks/example_data/ek60_single_channel_yml_cal_files_input/: 2016-07-18_GPT  18 kHz.yml  2016-07-18_GPT  38 kHz.yml  2016-07-18_GPT  70 kHz.yml  2016-07-18_GPT 120 kHz.yml  2016-07-18_GPT 200 kHz.yml
notebooks/example_data/ek80_FM_cal_file_input_folder/: CalibrationDataFile-D20230720-T183638_cw_onaxis200_only.xml  CalibrationDataFile-D20230720-T192325_70cw_onaxis.xml  CalibrationDataFile-D20230720-T225417-18CW.xml  CalibrationDataFile-D20230720-T232023-38CW_onaxis.xml
src/aa_si_calibration/: __init__.py  calibration.py  calibration_keys.py  comparison.py  constants.py  manufacturer_file_parsers.py  mapping_algorithm.py  raw_reader_api.py  standardized_file_lib.py  templates.py  utils.py
src/aa_si_calibration/schema/: docs_gen_runner.ipynb  schema_docs_generator.py
src/aa_si_calibration/simrad_reader/: geometery_tools.py  raw_reader.py  reader_errors.py
src/calibration_library/: __init__.py  calibration.py  manufacturer_file_parsers.py  mapping_algorithm.py  raw_reader_api.py  standardized_file_lib.py
src/calibration_library/schema/: standardized_calibration_file_schema.json
src/calibration_library/simrad_reader/: __init__.py  base_reader.py
src/mypackagename/: __init__.py
standardized_file/examples/current_drafts/: 2023-07-20__18000__config-1.yml  2023-07-20__38000__config-2.yml  2026-02-18__WBT 400479-15 ES18_ES__NoSN__0__0.001024__1000.0__18000.0__18000.0.yml
standardized_file/examples/mapping_file/: channel_mapping.yaml
standardized_file/examples/previous_drafts/: updated_single_channel_HB1603_L1-D20160703_cal_report.yml
standardized_file/json_schema/: standardized_calibration_file_schema.json  standardized_calibration_file_schema.md
tests/: conftest.py  test_package.py  test_pipelines.py
