[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mypackagename"
version = "0.1.0"
description = "A template Python package for NOAA Fisheries AA-SI projects."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.name@noaa.gov" },
]
maintainers = [
    { name = "Your Name", email = "your.name@noaa.gov" },
]
keywords = [
    "noaa",
    "fisheries",
    "acoustics",
    # TODO: Add your package-specific keywords
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # Add your package dependencies here, e.g.:
    # "numpy>=1.21.0",
    # "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "pylint>=3.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/nmfs-ost/mypackagename"
Documentation = "https://nmfs-ost.github.io/mypackagename/"
Repository = "https://github.com/nmfs-ost/mypackagename.git"
Issues = "https://github.com/nmfs-ost/mypackagename/issues"
Changelog = "https://github.com/nmfs-ost/mypackagename/blob/main/CHANGELOG.md"

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mypackagename"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

[tool.coverage.run]
source = ["src/mypackagename"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[tool.pylint.main]
py-version = "3.10"
source-roots = ["src"]

[tool.pylint.format]
max-line-length = 88

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",  # Often not needed for simple modules
]
